fixed scrollbars in firefox for layer menu, #31. Also fixed a reference in openlayers.

--- a/src/styles/layerMenu.scss
+++ b/src/styles/layerMenu.scss
@@ -285,6 +285,7 @@ button.position-control-button {
     /*height: 100%;*/
     display: block;
     width: 100%;
+    min-height: 0px;
     @include flex();
     @include flex-grow(1);
     .toggle {
